# fastapi-starter

./: .coveragerc  .test.env  Makefile  README.md  alembic.ini  app.py  pyproject.toml  requirements.txt
api/: users.py
db/: db.py
migrations/: env.py
migrations/versions/: 00deda5ae00c_init.py  1dd746f95206_add_initial_tables.py  5de4abd3ac35_init.py
models/: __init__.py  users.py
tests/: test_api.py  test_pw.py
